--- a/_config.yml
+++ b/_config.yml
@@ -10,20 +10,22 @@ baseurl: ""
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
-lang: en
+lang: ko
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone: Asia/Shanghai
+timezone: Asia/Seoul
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+# the main title
+title: PWNSEC
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+# it will display as the sub-title
+tagline: PWNSEC Blog 
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  This is description
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: ""
